--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@cds/city": "^1.1.0",
+    "@cds/core": "^5.6.0",
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
