--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@cds/city": "^1.1.0",
     "@cds/core": "^5.0.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^2.9.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
