--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ng-recaptcha": "^8.0.1",
     "popper.js": "^1.16.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.0.1",
